# director_factory

./: .dockerignore  .env.example  .gitignore  Dockerfile  ISSUES.md  PROJECT_STATUS.md  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  run_project.py
.github/workflows/: ci.yml
assets/: _index.json
assets/luts/: cinematic_teal_orange.cube  cold_blue.cube  dark_desaturated.cube  desolate_cold.cube  film_noir_bw.cube  industrial_steel.cube  neutral_grade.cube  sunset_warm.cube  vibrant_pop.cube  warm_golden.cube
db/: init.sql
grafana/: datasources.yml
grafana/dashboards/: dashboards.yml  pipeline-monitor.json
scripts/: download_arcface_model.py  download_chattts_model.py  generate_bgm.py  generate_sfx.py  generate_vfx.py
src/: api.py  main.py
src/agents/: __init__.py  art_director.py  character_director.py  cinematographer.py  colorist.py  director.py  editor.py  lighting_td.py  scheduler.py  sound_designer.py  storyboarder.py  vfx_subtitles.py  voice_actor.py  writer.py
src/core/: agent.py  config.py  logging.py  message_bus.py
src/data/: protocols.py
src/pipeline/: runner.py
src/tools/: asset_db.py  audio_video.py  base.py  character_tools.py  cloud_image_gen.py  face_utils.py  image_gen.py  lora_sourcing.py  performance.py  render.py  scorers.py  text_gen.py  translator.py
src/web/: __init__.py  routes.py
tests/: test_asset_db.py  test_cloud_image_gen.py  test_e2e.py  test_lora_sourcing.py  test_multi_char_composer.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_text_gen.py  test_translator.py
(+6 files in other folders)
